# TelegramBot

./: Cargo.toml  readme.md
.cargo/: config.toml
src/: main.rs  query.rs
src/graphql/: query.graphql  schema.graphql
