[package]
name = "teloxide_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = [ "macros" ]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
pretty_env_logger = "0.4"
tracing = "0.1"
juniper = "0.15.11"
graphql_client = "0.12"
serde = "1"
anyhow = "1"